# KScriptRust

./: .gitignore  Cargo.toml  license  readme.md
script/: class.ks  class2.ks  class3.ks  closure.ks  closure3.ks  closure4.ks  closure5.ks  closure6.ks  fib.ks  for_loop.ks  increment.ks  linked_list.ks  local.ks  stress_string.ks  test.ks  write_file.ks
src/: callframe.rs  chunk.rs  class.rs  closure.rs  compiler.rs  debug.rs  function.rs  heap.rs  instance.rs  linkedlist.rs  main.rs  nativefn.rs  object.rs  scanner.rs  tests.rs  token.rs  utils.rs  value.rs  vm.rs
